--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
   <!-- main -->
 
-  <include src="./partials/categories.html"></include>
+  <!-- <include src="./partials/categories.html"></include> -->
   <!-- <include src="./partials/support.html"></include> -->
   <include src="./partials/best-sellers.html"></include>
 
